--- a/Website/Kaledos.html
+++ b/Website/Kaledos.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Kaledos</title>
 </head>
 
@@ -32,6 +33,12 @@
             <button class="christmasButtonFour" onclick="kaledosKeturi()"></button>
             <button class="christmasButtonFive" onclick="kaledosPenki()"></button>
             <button class="christmasButtonSix" onclick="kaledosSesi()"></button>
+            <div class="container" >
+            <div class="mb-3">
+                <label for="formFileSm" class="form-label">Pasirinkite savo nuotrauka</label>
+                <input class="form-control form-control-sm" id="formFileSm" type="file">
+              </div>
+              </div>
         </div>
         <div class="button-area">
             <h3>Paveikslėlio pozicija</h3>
