--- a/Website/index.html
+++ b/Website/index.html
@@ -1,53 +1,86 @@
-
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-   
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Atvirukas</title>
-  </head>
 
-  <body>
-    <header>
-      <h1>Atvyruko Kūrimas</h1>
-    </header>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <main>
-      <div class="container">
-        <div class="row">
-            <div class="col-6">
-              <a href="Kaledos.html"><img src="IMAGES/kaledos1.jfif" alt="Kaledinis"></a>
-            </div>
-            <div class="col-6"> 
-              <a href="Velykos.html"><img src="IMAGES/velykos1.jfif" alt="Velykos"></a>
-            </div>
-            <div class="col-6"> 
-              <a href="Gimtadienis.html"><img src="IMAGES/gimtadienis1.jfif" alt="Gimtadienis"></a>
-            </div>
-            <div class="col-6"> 
-              <a href="Atostogos.html"><img src="IMAGES/atostogos1.jfif" alt="Atostogos"></a>
-            </div>
-        </div>   
-      </div>  
-    </main>
 
-    <footer>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    </footer>
+  <link rel="stylesheet" href="style.css">
+  <title>Atvirukas</title>
+</head>
 
-   
+<body>
+  <header>
+    <h1 class="display-2">POSTCARD CREATION</h1>
+  </header>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <main>
+    <div class="container">
+      <div class="row ">
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+        <div class="col-lg-4 col-md-6 col-sm-12 col-12 d-flex flex-wrap text">
+          <h5 class="display-5">Dear Guest,</h5>
+          <p>Our I aim is to help you to celabrate!!! Let's do it even more festive with personalized greeting cards!
+            We love to be a part of your celebration!
+          </p>
+          <p>Please, use our template to create a celebration card. Click on the celebration, choose image (or add one
+            that you
+            would like to see on the postcard), change its position and background until you will be satisfied with the
+            design.
+            Type your text, print a card and greet your friend with uniqe and personal postcard. </p>
+          <p>We were trying to make this webpage user-friendly and useful as possible. We hope you like to use it.
+            We will wait for all comments and suggestions by email postcard@creation.com
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-  </body>
+          </p>
+
+        </div>
+
+        <div class="cards col-lg-8 col-md-6 col-sm-12 col-12 d-flex flex-wrap ">
+          <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
+            <a href="Kaledos.html"><img src="IMAGES/kaledos1.jfif" alt="Kaledinis"></a>
+            <div class="element">Christmas</div>
+          </div>
+          <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
+            <a href="Velykos.html"><img src="IMAGES/velykos1.jfif" alt="Velykos"></a>
+            <div class="element">Easter</div>
+          </div>
+          <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
+            <a href="Gimtadienis.html"><img src="IMAGES/gimtadienis1.jfif" alt="Gimtadienis"></a>
+            <div class="element">Birthday</div>
+          </div>
+          <div class="elements col-lg-6 col-md-6 col-sm-12 col-12">
+            <a href="Atostogos.html"><img src="IMAGES/atostogos1.jfif" alt="Atostogos"></a>
+            <div class="element">Vacation</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </main>
+
+  <footer>
+
+  </footer>
+
+
+
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
