--- a/Website/index.html
+++ b/Website/index.html
@@ -22,22 +22,21 @@
     <div class="container">
       <div class="row ">
 
-
-        <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
+        <div class="elements col-lg-6 col-md-6 col-sm-12 col-12">
           <a href="Kaledos.html"><img src="IMAGES/kaledos1.jfif" alt="Kaledinis"></a>
-          <div class="element">Christmas</div>
+          <div class="element one">Christmas</div>
         </div>
         <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
           <a href="Velykos.html"><img src="IMAGES/velykos1.jfif" alt="Velykos"></a>
-          <div class="element">Easter</div>
+          <div class="element two">Easter</div>
         </div>
         <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
           <a href="Gimtadienis.html"><img src="IMAGES/gimtadienis1.jfif" alt="Gimtadienis"></a>
-          <div class="element">Birthday</div>
+          <div class="element three">Birthday</div>
         </div>
         <div class="elements col-lg-6 col-md-6 col-sm-12 col-12">
           <a href="Atostogos.html"><img src="IMAGES/atostogos1.jfif" alt="Atostogos"></a>
-          <div class="element">Vacation</div>
+          <div class="element four">Vacation</div>
         </div>
 
       </div>
