AT-1 added functionallity

--- a/Website/index.html
+++ b/Website/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <link rel="stylesheet" href="style.css">
-  <title>Atvirukas</title>
+  <title>Postcards</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
   </header>
 
   <main>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row ">
 
         <div class="col-lg-4 col-md-6 col-sm-12 col-12 d-flex flex-wrap text">
@@ -41,19 +41,19 @@
 
         <div class="cards col-lg-8 col-md-6 col-sm-12 col-12 d-flex flex-wrap ">
           <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
-            <a href="Kaledos.html"><img src="IMAGES/kaledos1.jfif" alt="Kaledinis"></a>
+            <a href="Christmas.html"><img src="IMAGES/Christmas1.jpg" alt="Christmas"></a>
             <div class="element">Christmas</div>
           </div>
           <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
-            <a href="Velykos.html"><img src="IMAGES/velykos1.jfif" alt="Velykos"></a>
+            <a href="Easter.html"><img src="IMAGES/Easter1.jpg" alt="Easter"></a>
             <div class="element">Easter</div>
           </div>
           <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
-            <a href="Gimtadienis.html"><img src="IMAGES/gimtadienis1.jfif" alt="Gimtadienis"></a>
+            <a href="Birthday.html"><img src="IMAGES/Birthday1.jpg" alt="Birthday"></a>
             <div class="element">Birthday</div>
           </div>
           <div class="elements col-lg-6 col-md-6 col-sm-12 col-12">
-            <a href="Atostogos.html"><img src="IMAGES/atostogos1.jfif" alt="Atostogos"></a>
+            <a href="Vacation.html"><img src="IMAGES/Vacation1.jpg" alt="Vacation"></a>
             <div class="element">Vacation</div>
           </div>
         </div>
