--- a/Website/index.html
+++ b/Website/index.html
@@ -1,68 +1,59 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="STYLES/index-style.css">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Licorice&display=swap" rel="stylesheet">
 
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <title>Card Yourself</title>
+  </head>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="style.css">
-  <title>Postcards</title>
-</head>
-
-<body>
-  <header>
-    <h1 class="display-2">POSTCARD CREATION</h1>
-  </header>
-
-  <main>
-    <div class="container-fluid">
-      <div class="row ">
-
-        <div class="elements col-lg-6 col-md-6 col-sm-12 col-12">
-          <a href="Christmas.html"><img src="IMAGES/Christmas1.jpg" alt="Christmas"></a>
-          <div class="element one">Christmas</div>
+  <body>
+    <div class="container-fluid ">
+        <div class="row">
+            <div class="select col-12">
+                <p>Select your fiesta &#8631</p>
+           </div>
         </div>
-        <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
-          <a href="Easter.html"><img src="IMAGES/Easter1.jpg" alt="EAster"></a>
-          <div class="element two">Easter</div>
+        <div class="row image-row">
+            <div class="image-div col-lg-3 col-md-6 col-sm-12">
+                <a href="christmas.html"><img src="IMAGES/INDEX-IMG/xmas.jpg" alt="xmass"></a>
+            </div>
+            <div class="image-div col-lg-3 col-md-6 col-sm-12">
+                <a href="#"><img src="IMAGES/INDEX-IMG/easter.jpg" alt="easter"></a>
+            </div>
+            <div class="image-div col-lg-3 col-md-6 col-sm-12">
+                <a href="#"><img src="IMAGES/INDEX-IMG/holiday.jpg" alt="holiday"></a>
+            </div>
+            <div class="image-div bday col-lg-3 col-md-6 col-sm-12">
+                <a href="#"><img src="IMAGES/INDEX-IMG/bday.jpg" alt="xmass"></a>
+            </div>
         </div>
-        <div class="elements col-lg-6 col-md-6 col-sm-12 col-12 ">
-          <a href="Birthday.html"><img src="IMAGES/Birthday1.jpg" alt="Birthday"></a>
-          <div class="element three">Birthday</div>
-        </div>
-        <div class="elements col-lg-6 col-md-6 col-sm-12 col-12">
-          <a href="Vacation.html"><img src="IMAGES/Vacation1.jpg" alt="Vacation"></a>
-          <div class="element four">Vacation</div>
-        </div>
-
-      </div>
     </div>
 
-  </main>
-
-  <footer>
-
-  </footer>
 
 
 
-  <!-- Optional JavaScript; choose one of the two! -->
 
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+    
+    <!-- Optional JavaScript; choose one of the two! -->
 
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
-</body>
-
+  </body>
 </html>
