--- a/Website/index.html
+++ b/Website/index.html
@@ -15,25 +15,29 @@
   </head>
 
   <body>
-    <div class="container-fluid ">
-        <div class="row">
-            <div class="select col-12">
-                <p>Select your fiesta &#8631</p>
-           </div>
-        </div>
-        <div class="row image-row">
-            <div class="image-div col-lg-3 col-md-6 col-sm-12">
-                <a href="christmas.html"><img src="IMAGES/INDEX-IMG/xmas.jpg" alt="xmass"></a>
+        <div class="container-fluid cont">
+            <div class="row">
+                <div class="select col-12">
+                 <p>Select your fiesta &#8631</p>
+                </div>
             </div>
-            <div class="image-div col-lg-3 col-md-6 col-sm-12">
-                <a href="#"><img src="IMAGES/INDEX-IMG/easter.jpg" alt="easter"></a>
-            </div>
-            <div class="image-div col-lg-3 col-md-6 col-sm-12">
-                <a href="#"><img src="IMAGES/INDEX-IMG/holiday.jpg" alt="holiday"></a>
-            </div>
-            <div class="image-div bday col-lg-3 col-md-6 col-sm-12">
-                <a href="#"><img src="IMAGES/INDEX-IMG/bday.jpg" alt="xmass"></a>
-            </div>
+            <div class="row image-row">
+                <div class="image-div col-lg-3 col-md-6 col-sm-12 ">
+                     <a href="christmas.html"><img src="IMAGES/INDEX-IMG/xmas.jpg" alt="xmass" class="img-responsive" ></a>
+                     <p>christ<b>MAS</b> </p>
+                </div>
+                <div class="image-div col-lg-3 col-md-6 col-sm-12 ">
+                    <a href="#"><img src="IMAGES/INDEX-IMG/easter.jpg" alt="easter" class="img-responsive" ></a>
+                    <p>eas<b>TER</b> </p>
+                </div>
+                <div class="image-div col-lg-3 col-md-6 col-sm-12 ">
+                    <a href="#"><img src="IMAGES/INDEX-IMG/holiday.jpg" alt="holiday" class="img-responsive" ></a>
+                    <p>holi<b>DAY</b> </p>
+                </div>
+                <div class="image-div bday col-lg-3 col-md-6 col-sm-12">
+                    <a href="#"><img src="IMAGES/INDEX-IMG/bday.jpg" alt="bday" class="img-responsive" ></a>
+                    <p>birth<b>DAY</b> </p>
+                </div>
         </div>
     </div>
 
