Unnecessary Christmas functions removed

--- a/Website/Christmas.html
+++ b/Website/Christmas.html
@@ -115,23 +115,23 @@
                    </div>
                    <hr>
                 </div>
-              </div>     
+              </div>      -->
             </div>
-          </div> -->
+          </div>
         
             <!-- **************** RIGHT SIDE - CARD VIEW *************************** -->
-        <!-- <div class="col-lg-8 right-view">
-          <div class="row frame mx-auto">
-            <div class="col-12 atvirukas" id="atvirukas">
-              <img id="img-area" class="changing_img" src="IMAGES/CHRISTMAS-IMG/xmass7.png" alt="kaledos">
+          <div class="col-lg-8 right-view">
+            <div class="row frame mx-auto">
+              <div class="col-12 atvirukas" id="atvirukas">
+                <img id="img-area" class="changing_img" src="IMAGES/CHRISTMAS-IMG/xmass7.png" alt="kaledos">
+              </div>
             </div>
+            <!-- <div class="row mx-auto">
+              <div class="col-12 snap-col ">
+                <button class="snapshot" onclick=""><i class="fa fa-camera" aria-hidden="true"></i> Take a snap</button>
+             </div>
+            </div> -->
           </div>
-          <div class="row mx-auto">
-            <div class="col-12 snap-col ">
-              <button class="snapshot" onclick=""><i class="fa fa-camera" aria-hidden="true"></i> Take a snap</button>
-            </div>
-          </div>
-        </div> -->
       </div>
       </div>
     </main>
