Minor brushes on index page responsivnes, scaling and images titles (center)

--- a/Website/index.html
+++ b/Website/index.html
@@ -16,7 +16,7 @@
 
   <body>
         <div class="container-fluid cont">
-            <div class="row">
+            <div class="row title-row">
                 <div class="select col-12">
                  <p>Select your fiesta &#8631</p>
                 </div>
@@ -40,11 +40,6 @@
                 </div>
         </div>
     </div>
-
-
-
-
-
     
     <!-- Optional JavaScript; choose one of the two! -->
 
