input box for text

--- a/Website/Christmas.html
+++ b/Website/Christmas.html
@@ -132,8 +132,11 @@
             <div class="col-12 atvirukas" id="atvirukas">
               <img id="img-area" class="changing_img" src="IMAGES/CHRISTMAS-IMG/xmass7.png" alt="kaledos">
 
-              <textarea class="col-6 left-view" id="text" rows="20"></textarea>
-              <!-- <button>Submit</button> -->
+              <input type="text" name="name" class="form-class" id="text-input">
+              <button>Submit</button>
+
+              <!-- <textarea class="col-6 left-view" id="text" rows="20"></textarea>
+              <button>Submit</button> -->
 
 
             </div>
