take a snap functionality

--- a/Website/Christmas.html
+++ b/Website/Christmas.html
@@ -146,47 +146,11 @@
           </div>
           <div class="row mx-auto">
             <div class="col-12 snap-col ">
-              <button class="snapshot downloadtable" id="btnDownload" onclick="downloadtable()"><i class="fa fa-camera" aria-hidden="true"></i> Take a snap</button>
+              <button class="snapshot downloadtable" id="btnDownload" onclick="window.print()"><i class="fa fa-camera" aria-hidden="true"></i> Take a snap</button>
 
             </div>
-          </div>
-                            
+          </div>                          
         </div>
-        <!--  id="tablecontainer" -->
-        <div id="tablecontainer">
-          <table class="table table-striped table-dark">
-              <thead>
-                  <tr>
-                      <th scope="col">#</th>
-                      <th scope="col">First</th>
-                      <th scope="col">Last</th>
-                      <th scope="col">Handle</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr>
-                      <th scope="row">1</th>
-                      <td>Mark</td>
-                      <td>Otto</td>
-                      <td>@mdo</td>
-                  </tr>
-                  <tr>
-                      <th scope="row">2</th>
-                      <td>Jacob</td>
-                      <td>Thornton</td>
-                      <td>@fat</td>
-                  </tr>
-                  <tr>
-                      <th scope="row">3</th>
-                      <td>Larry</td>
-                      <td>the Bird</td>
-                      <td>@twitter</td>
-                  </tr>
-              </tbody>
-          </table>
-      </div>
-
-      <button id="demo" class="downloadtable" onclick="downloadtable()"> Download Table</button>
       </div>
     </div>
   </main>
@@ -209,7 +173,6 @@
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
 
-    <script src="SCRIPTS/html2canvas.js"></script>
   <script src="SCRIPTS/christmas-script.js"></script>
 </body>
 
