--- a/Website/Christmas.html
+++ b/Website/Christmas.html
@@ -137,10 +137,10 @@
 
         <div class="col-lg-8 right-view">
           <div class="row frame mx-auto">
-            <div class="col-12 atvirukas " id="atvirukas" id="tablecontainer">
+            <div class="col-12 atvirukas " id="atvirukas">
                         
              <img id="img-area" class="changing_img" src="IMAGES/CHRISTMAS-IMG/xmass7.png" alt="kaledos">
-              <textarea class="col-6 left-view" style="overflow:hidden" id="text" maxlength="400" rows="11"></textarea>
+              <textarea class="col-6 left-view" style="overflow:hidden" id="text" rows="11"></textarea>
                                             
             </div>
           </div>
