Easter page completed

--- a/Website/Christmas.html
+++ b/Website/Christmas.html
@@ -35,7 +35,10 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item active mx-2">
-                <a class="nav-link" href="Velykos.html">Easter</a>
+                <a class="nav-link" href="Christmas.html">Christmas</a>
+              </li>
+              <li class="nav-item active mx-2">
+                <a class="nav-link" href="Easter.html">Easter</a>
               </li>
               <li class="nav-item active mx-2">
                 <a class="nav-link" href="Gimtadienis.html">Birthday</a>
