--- a/Website/index.html
+++ b/Website/index.html
@@ -27,7 +27,7 @@
                      <p>christ<b>MAS</b> </p>
                 </div>
                 <div class="image-div col-lg-3 col-md-6 col-sm-12 ">
-                    <a href="#"><img src="IMAGES/INDEX-IMG/easter.jpg" alt="easter" class="img-responsive" ></a>
+                    <a href="Easter.html"><img src="IMAGES/INDEX-IMG/easter.jpg" alt="easter" class="img-responsive" ></a>
                     <p>eas<b>TER</b> </p>
                 </div>
                 <div class="image-div col-lg-3 col-md-6 col-sm-12 ">
