--- a/Website/Birthday.html
+++ b/Website/Birthday.html
@@ -45,7 +45,7 @@
                             <a class="nav-link" href="Birthday.html">Birthday</a>
                         </li>
                         <li class="nav-item active mx-2">
-                            <a class="nav-link" href="Astostogos.html">Holiday</a>
+                            <a class="nav-link" href="Vacation.html">Holiday</a>
                         </li>
                     </ul>
                 </div>
